<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="test_network">测试网络</string>
    <string name="app_name">长距离系统</string>
    <string name="hello_world">Hello world!</string>
    <string name="copyright">云南省公安厅交通警察总队©</string>
    <string name="login">登录</string>
    <string name="student_query">学员查询</string>
    <string name="student_name">学员姓名</string>
    <string name="coach_query">助理考试员查询</string>
    <string name="assistant_query">业务员查询</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="identity_number">身份证号码</string>
    <string name="mobile_number">手机号</string>
    <string name="remember_password">记住密码</string>
    <string name="car_information">车辆信息</string>
    <string name="cars">车辆</string>
    <string name="personal">人员</string>
    <string name="order">预约</string>
    <string name="my_center">个人中心</string>
    <string name="search">搜索</string>
    <string name="student">学员</string>
    <string name="coach">助理考试员</string>
    <string name="car_info">车辆信息</string>
    <string name="valid">有效</string>
    <string name="partial_valid">部分有效</string>
    <string name="invalid">无效</string>
    <string name="meter">里程:</string>
    <string name="timespan">时长:</string>
    <string name="average_speed">平均速度:</string>
    <string name="coach_colon">助理考试员:</string>
    <string name="title_activity_network_test">网络测试</string>
    <string name="title">长距离服务器访问测试</string>
    <string name="nsTest">域名访问测试</string>
    <string name="cmTest">移动网络访问测试</string>
    <string name="ctTest">电信网络访问测试</string>
    <string name="nsTestResult"/>
    <string name="cmTestResult"/>
    <string name="ctTestResult"/>
    <string name="buttonText">开始测试</string>

</resources>
