<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >    
    
    <com.zw.cjl.pager.CustomViewPager  
        android:id="@+id/mainViewpager"  
        android:layout_width="wrap_content"  
        android:layout_height="0dp"  
        android:layout_weight="1.0"
        android:background="#EFEEE8"
        android:layout_gravity="center" >         
    </com.zw.cjl.pager.CustomViewPager> 
    
    <LinearLayout
        android:id="@+id/mainTabLayout"
        android:layout_width="fill_parent"
        android:background="@color/white"
        android:baselineAligned="false"
        android:layout_height="55.0dip" >

        <LinearLayout 
            android:id="@+id/cars"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            
            <ImageView 
                android:id="@+id/cars_image"
                android:layout_width="35dip"
            	android:layout_height="35dip"
            	android:background="@drawable/car_select"
            	android:layout_gravity="center"
            	android:contentDescription="@string/hello_world" />
            
            <TextView
	            android:id="@+id/cars_text"
	            android:layout_width="fill_parent"
	            android:layout_height="20dip"
	            android:gravity="center_horizontal"
	            android:text="@string/cars"
	            android:textColor="@color/welcome_blue"
	            android:textSize="13.0dip" />
            
        </LinearLayout>
        
        <LinearLayout 
            android:id="@+id/personal"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            
            <ImageView 
                android:id="@+id/personal_image"
                android:layout_width="35dip"
            	android:layout_height="35dip"
            	android:background="@drawable/personal_unselect"
            	android:layout_gravity="center"
            	android:contentDescription="@string/hello_world"/>
            
            <TextView
	            android:id="@+id/personal_text"
	            android:layout_width="fill_parent"
	            android:layout_height="20dip"
	            android:gravity="center_horizontal"
	            android:text="@string/personal"
	            android:textColor="@color/text_gray"
	            android:textSize="13.0dip" />
            
        </LinearLayout>
        
        <LinearLayout 
            android:id="@+id/orders"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            
            <ImageView 
                android:id="@+id/orders_image"
                android:layout_width="35dip"
            	android:layout_height="35dip"
            	android:background="@drawable/order_unselect"
            	android:layout_gravity="center"
            	android:contentDescription="@string/hello_world" />
            
            <TextView
	            android:id="@+id/orders_text"
	            android:layout_width="fill_parent"
	            android:layout_height="20dip"
	            android:gravity="center_horizontal"
	            android:text="@string/order"
	            android:textColor="@color/text_gray"
	            android:textSize="13.0dip" />
            
        </LinearLayout>
        
        <LinearLayout 
            android:id="@+id/my_center"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            
            <ImageView 
                android:id="@+id/my_center_image"
                android:layout_width="35dip"
            	android:layout_height="35dip"
            	android:background="@drawable/info_center_unselect"
            	android:layout_gravity="center"
            	android:contentDescription="@string/hello_world" />
            
            <TextView
	            android:id="@+id/my_center_text"
	            android:layout_width="fill_parent"
	            android:layout_height="20dip"
	            android:gravity="center_horizontal"
	            android:text="@string/my_center"
	            android:textColor="@color/text_gray"
	            android:textSize="13.0dip"  />
            
        </LinearLayout>
        
    </LinearLayout>
    
</LinearLayout>
